<resources>
    <string name="app_name">To Do List</string>
    <string name="page_title">Add Task</string>
    <string name="enter_a_new_task">Enter Your Task</string>

    <string name="date_1">21</string>
    <string name="date_2">22</string>
    <string name="date_3">23</string>
    <string name="date_4">24</string>
    <string name="date_5">25</string>

    <string name="day_1">MON</string>
    <string name="day_2">TUE</string>
    <string name="day_3">WED</string>
    <string name="day_4">THU</string>
    <string name="day_5">FRI</string>
    <string name="day_6">SAT</string>
    <string name="day_7">SUN</string>

    <string name="task_name1">Create a project</string>
    <string name="task_name2">Go to market</string>

    <string name="description1">Android</string>

    <string name="action_1">Edit</string>
    <string name="action_2">Delete</string>

    <!-- add_new_task.xml -->
    <string name="title_activity_add_new_task">add_new_task</string>
    <string name="task_title">Title</string>
    <string name="input_date">Date</string>
    <string name="description_label">Description</string>
    <string name="save_task_button">save</string>
    <string name="date_hint">MM/DD/YYYY</string>
    <string name="description_hint">Enter Task Detail</string>
</resources>
