<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- AppBar Layout -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Back Navigation in Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/add_task_topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
            app:title="@string/page_title"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        >

        <TextView
            android:id="@+id/title_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:text="@string/task_title"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/task_name_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/enter_a_new_task"
            android:inputType="text"
            android:autofillHints=""/>

        <TextView
            android:id="@+id/date_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/input_date"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/task_date_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/date_hint"
            android:importantForAutofill="no"
            android:inputType="date" />

        <TextView
            android:id="@+id/description_label_tv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/description_label"
            android:textColor="@color/black"
            android:textSize="18sp"
            />

        <EditText
            android:id="@+id/task_description_et"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:hint="@string/description_hint"
            android:importantForAutofill="no"
            android:inputType="textLongMessage" />

    </LinearLayout>

    <Button
        android:id="@+id/save_task_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/save_task_button"
        android:textSize="18sp"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:drawableRight="@drawable/ic_baseline_done_all_24"
        />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
