<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Date -->
            <TextView
                android:id="@+id/date_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:text="Sep 21, 2020"
                android:textColor="@color/darkGrey"
                android:textSize="18sp" />

            <!-- D-Day -->
            <TextView
                android:id="@+id/day_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                android:text="Today"
                android:textColor="@color/black"
                android:textSize="32sp" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Add Button -->
            <Button
                android:id="@+id/add_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:padding="12dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/rounded_button"
                android:drawableStart="@drawable/ic_baseline_add_24"
                android:text="Add"
                android:textSize="16sp"
                android:textColor="@color/white" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
       >

        <!-- Day & Date (masih date saja)-->
        <com.google.android.material.tabs.TabLayout
            android:id="@+id/day_tabLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabContentStart="16dp"
            app:tabMode="scrollable">

            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_1" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_2" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_3" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_4" />
            <com.google.android.material.tabs.TabItem
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date_5" />

        </com.google.android.material.tabs.TabLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp">

        <!-- List Task using CardView-->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/task_cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/task_title_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/task_name1"
                    android:textAppearance="?attr/textAppearanceHeadline6"
                    android:textSize="18sp" />
                <TextView
                    android:id="@+id/task_description_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/description1"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- Buttons -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_gravity="end"
                android:paddingHorizontal="5dp"
                android:orientation="horizontal">

                <!-- Edit Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:layout_marginEnd="8dp"
                    android:drawableTop="@drawable/ic_baseline_edit_24"
                    android:text="@string/action_1" />

                <!-- Delete Button -->
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete_button"
                    style="?attr/borderlessButtonStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="70dp"
                    android:drawableTop="@drawable/ic_baseline_delete_24"
                    android:text="@string/action_2" />
            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
    
</androidx.coordinatorlayout.widget.CoordinatorLayout>